# kajaterv

./: Cargo.toml  Trunk.toml  index_build.html  kajaterv-d40d37d8e11e0fcd_bg.wasm  test.html
docs/: CNAME  index.html  kajaterv-53ca0a6c593055bc_bg.wasm  kajaterv-5b7e12a6c40cbb8a.js  kajaterv-5b7e12a6c40cbb8a_bg.wasm  kajaterv-7f12b46c7887c4ef.js  kajaterv-8988ac88135be9d4.js  kajaterv-8988ac88135be9d4_bg.wasm  kajaterv-d40d37d8e11e0fcd.js  kajaterv-f8e9324cd95b1b4.js  kajaterv-f8e9324cd95b1b4_bg.wasm  kajaterv-faf365159f700ebf.js  kajaterv-faf365159f700ebf_bg.wasm
src/: beszer.rs  data.rs  display.rs  keyboard.rs  lib.rs  main.rs  matrix.rs  meal.rs  osszetevok.rs  recipe.rs  shop.rs  socket.rs  terv.rs
src/beszer/: display.rs
src/meal/: display.rs
src/osszetevok/: display.rs
src/recipe/: display.rs  ingredient.rs
src/shop/: display.rs
src/terv/: display.rs
