[package]
name = "kajaterv"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = "0.19.3"
web-sys = { version = "0.3", features = ["HtmlInputElement", "Window", "MessageEvent"]}
gloo = { version = "0.11", features = ["console", "events"] }
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "packed"